style/style.scss
/* ... */
.content_area ul {
    margin-top: 0px;
    padding: 0px;
    padding-left: 20px;
    padding-top: 0px;
    padding-bottom: 15px;
}

strong {
    border: 1px solid #aaa;
    border-radius: 4px;
    padding: 1px;
    padding-left: 3px;
    padding-right: 3px;
    margin: 1px;
    font-weight: normal;
    font-size: 21px;
    vertical-align: middle;
}

/*
  Expandable picture styles
*/

.illustration_block {
    display: block;
}

a.illustration_outer {
    display: inline-block;
    overflow: hidden;
    width: 100px;
    height: 100px;
    margin: 0px;
    padding: 10px;
    margin-right: 2%;
    margin-bottom: 2%;
    border-radius: 15px;
    background-color: #b8cd87;
    background: -webkit-linear-gradient(left, #b8cd87, #d1d483);
    background: -o-linear-gradient(left, #b8cd87, #d1d483);
    background: -moz-linear-gradient(left, #b8cd87, #d1d483);
    background: linear-gradient(to right, #b8cd87, #d1d483);
    text-decoration: none;
    cursor: pointer;
}

a.illustration_outer_larger {
    display: inline-block;
    overflow: hidden;
    width: 110px;
    height: 160px;
    margin: 0px;
    padding: 10px;
    margin-right: 2%;
    margin-bottom: 2%;
    border-radius: 15px;
    background-color: #b8cd87;
    background: -webkit-linear-gradient(left, #b8cd87, #d1d483);
    background: -o-linear-gradient(left, #b8cd87, #d1d483);
    background: -moz-linear-gradient(left, #b8cd87, #d1d483);
    background: linear-gradient(to right, #b8cd87, #d1d483);
    text-decoration: none;
    cursor: pointer;
}

a.illustration_outer_larger img {
    display: inline-block;
    overflow: hidden;
    width: 100%;
    height: 100%;
    border-radius: 10px;
}

a.illustration_outer span {
    display: inline-block;
    overflow: hidden;
    width: 100%;
    height: 100%;
    border-radius: 10px;
}

a.illustration_outer span img {
    display: block;
    position: relative;
}

a.illustration_outer p.close {
    display: inline-block;
    position: fixed;
    z-index: 999;
    bottom: 50px;
    left: 50px;
    width: 100px;
    height: 25px;
    padding: 10px;
    border-radius: 6px;
    font-weight: bold;
    text-align: center;
    color: #a7b97d;
    background-color: rgba(255,255,255,0.9);
    box-shadow: 0 0 6px 6px rgba(205,211,132,0.3);
}
a.illustration_outer p.close::before {
    content: '[x] ';
}

.shutter {
    display: none;
    position: absolute;
    top: 0px;
    bottom: 0px;
    width: 100px;
    height: 100px;
    background-color: #fff;
    cursor: pointer;
}

.shutter_img {
    background-color: #a7b97d !important;
    font-size: 14px;
}

/*
  Video poster styles
*/

a.video_poster {
    display: inline-block;
    overflow: hidden;
    width: 540px;
    height: 300px;
    margin: 0px;
    padding: 0px;
    margin-bottom: 20px;
    padding-top: 20px;
    border-radius: 10px;
    background-color: #aaa;
}

a.video_poster .video_picture {
    display: inline-block;
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    background-size: 100% auto;
    border-radius: 10px;
}

a.video_poster .video_picture .play {
    display: block;
    float: right;
    position: relative;
    left: +5px;
    border-radius: 5px;
    width: 120px;
    margin-top: 250px;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 15px;
    padding-right: 10px;
    background-color: #fff;
}

a.video_poster:hover {
    background-color: #a7b97d;
}

video {
    position: absolute;
    z-index: 200;
    width: 1px;
    height: 1px;
    left: 0px;
    top: 0px;
    margin: 0px;
    padding: 0px;
    border-collapse: collapse;
    border-radius: 10px;
    cursor: pointer;
}

/*
  Source code snippet
*/

.src_view {
    width: 550px;
    font-family: monospace;
}

.src_title {
    cursor: pointer;
    margin-top: 15px;
}

.src_button {
    padding-bottom: 4px;
    font-size: 12px;
}

.src_expandable {
    border-left: 1px solid #aaa;
    margin-left: 8px;
    padding-left: 15px;
    padding-top: 5px;
    margin-bottom: 10px;
}

.src_class {
    font-weight: bold;
    color: #a7b97d;
}

.src_class_name {
    font-weight: bold;
    color: #222;
}

/*
  Sketchbook classes
*/

.content_area#template_sketchbook header {
    margin: 0px;
    padding: 0px;
    margin-top: 60px;
    margin-bottom: 30px;
    padding-left: 3%;
    border-left: 1px solid #a7b97d;
}

.content_area#template_sketchbook header h3 {
    display: block;
    width: 97%;
    margin-bottom: 30px;
    font-size: 62px;
    line-height: 60px;
    font-weight: normal;
    color: #555;
}

.content_area#template_sketchbook section {
    width: 100%;
    margin-bottom: 30px;
    text-align: justify;
}

.content_area#template_sketchbook section p {
    width: 100%;
    margin-left: -80px;
}

.content_area#template_sketchbook section img {
    display: block;
    position: relative;
    z-index: 200;
    left: -18%;
    width: 118%;
    height: auto;
    margin: 0px;
    padding: 0px;
    margin-top: 0px;
    margin-bottom: 0px;
    margin-left: 80px;
}

.gumroad-button {
   text-align: center !important;
   margin-bottom: 25px !important;
}

.gumroad-button img {
   display: inline !important;
   width: 570px !important;
   height: auto !important;
   margin: 0px !important;
   padding: 0px !important;
   left: 0px !important;
   margin-top: 3px !important;
}

.content_area#template_sketchbook section blockquote {
    max-width: 500px;
}

/*
  Sketchbook pagination
*/

h3.copy {
    margin: 0px !important;
    padding-left: 5% !important;
    padding-bottom: 0px !important;
    text-align: left;
    font-size: 16px;
    color: #b8cd87;
}

.paging-navigation {
    border-top: 6px solid #b8cd87;
    width: 100%;
    margin: 0%;
    margin-top: 10px;
    margin-bottom: 60px;
    color: #222;
    text-align: center;
}

.paging-navigation .page-numbers {
    border-radius: 6px;
    display: inline-block;
    font-size: 35px;
    font-weight: 900;
    padding: 30px;
    margin: 6px;
    text-transform: uppercase;
}
/* ... */

